# what-morphism

./: .ghci  README.markdown  TestTH.hs  draft.tex  what-morphism.cabal
src/: WhatMorphism.hs
src/WhatMorphism/: Annotations.hs  AnyBool.hs  Build.hs  DirectedGraph.hs  Dump.hs  Expr.hs  Fold.hs  Function.hs  Fusion.hs  Generics.hs  HaskellList.hs  Inliner.hs  Pass.hs  Pattern.hs  PatternFunctor.hs  RemoveRec.hs  RewriteM.hs  SynEq.hs  TemplateHaskell.hs  Types.hs
