Name:          what-morphism
Version:       0.0.0.1
Synopsis:      Detect recursion patterns
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Language
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Exposed-modules:
    WhatMorphism
    WhatMorphism.Annotations
    WhatMorphism.TemplateHaskell

  Other-modules:
    WhatMorphism.Build
    WhatMorphism.DirectedGraph
    WhatMorphism.Dump
    WhatMorphism.Expr
    WhatMorphism.Inliner
    WhatMorphism.Pass
    WhatMorphism.Pattern
    WhatMorphism.RemoveRec
    WhatMorphism.RewriteM
    WhatMorphism.SynEq

  Build-depends:
    base             >= 4   && < 5,
    containers       >= 0.3 && < 0.6,
    ghc              >= 7.6 && < 7.7,
    mtl              >= 2.1 && < 2.2,
    syb              >= 0.3 && < 0.4,
    template-haskell >= 2.8 && < 2.9
