Name:          what-morphism
Version:       0.0.0.1
Synopsis:      Detect recursion patterns
License:       BSD3
License-file:  LICENSE
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Language
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Exposed-modules:
    WhatMorphism
    WhatMorphism.Annotations
    WhatMorphism.HaskellList
    WhatMorphism.TemplateHaskell

  Other-modules:
    WhatMorphism.AnyBool
    WhatMorphism.Build
    WhatMorphism.DirectedGraph
    WhatMorphism.Dump
    WhatMorphism.Expr
    WhatMorphism.Fold
    WhatMorphism.Fusion
    WhatMorphism.Inliner
    WhatMorphism.RemoveRec
    WhatMorphism.RewriteM
    WhatMorphism.SynEq
    WhatMorphism.Types

  Build-depends:
    base             >= 4   && < 5,
    containers       >= 0.3 && < 0.6,
    ghc              >= 7.6 && < 7.7,
    mtl              >= 2.1 && < 2.2,
    syb              >= 0.3 && < 0.5,
    template-haskell >= 2.8 && < 2.9
